# simd-optimizations

./: .gitmodules  CMakeLists.txt  README.md  build_osx.sh
src/: loop_optimize.cpp  loop_optimize.h  rgb_pixel.cpp  simple_float_array.cpp
test/: test_loop_optimize.cpp
